force-app/main/default/objects/User_Email__c/User_Email__c.object-meta.xml
<CustomObject>
    <label>User Email</label>
    <nameField>
        <label>User Email Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>