force-app/main/default/objects/User_Email__c/fields/Assessment_Target__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Target__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessment Target</label>
    <referenceTo>Assessment_Target__c</referenceTo>
    <relationshipLabel>User Emails</relationshipLabel>
    <relationshipName>User_Emails</relationshipName>
    <type>Lookup</type>
</CustomField>