force-app/main/default/objects/User_Email__c/fields/Inspector__c.field-meta.xml
<CustomField>
    <fullName>Inspector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspector</label>
    <referenceTo>Site_User__c</referenceTo>
    <relationshipLabel>User Emails (Inspector)</relationshipLabel>
    <relationshipName>User_Emails1</relationshipName>
    <type>Lookup</type>
</CustomField>