force-app/main/default/objects/User_Email__c/fields/Inspector_Email__c.field-meta.xml
<CustomField>
    <fullName>Inspector_Email__c</fullName>
    <formula>Inspector__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inspector Email</label>
    <type>Text</type>
</CustomField>