force-app/main/default/objects/User_Email__c/fields/Inspector_Name__c.field-meta.xml
<CustomField>
    <fullName>Inspector_Name__c</fullName>
    <formula>Inspector__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inspector Name</label>
    <type>Text</type>
</CustomField>