force-app/main/default/objects/User_Email__c/fields/Main_User__c.field-meta.xml
<CustomField>
    <fullName>Main_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main User</label>
    <referenceTo>Site_User__c</referenceTo>
    <relationshipLabel>User Emails</relationshipLabel>
    <relationshipName>User_Emails</relationshipName>
    <type>Lookup</type>
</CustomField>