force-app/main/default/objects/User_Email__c/fields/Main_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Main_User_Name__c</fullName>
    <formula>Main_User__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Main User Name</label>
    <type>Text</type>
</CustomField>