force-app/main/default/objects/User_Email__c/fields/Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Questionnaire</label>
    <referenceTo>Questionnaire__c</referenceTo>
    <relationshipLabel>User Emails</relationshipLabel>
    <relationshipName>User_Emails</relationshipName>
    <type>Lookup</type>
</CustomField>