force-app/main/default/objects/User_Email__c/fields/Questionnaire_Name__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Name__c</fullName>
    <formula>Questionnaire__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Questionnaire Name</label>
    <type>Text</type>
</CustomField>